--- a/website/template.html.erb
+++ b/website/template.html.erb
@@ -42,7 +42,13 @@
     </p>
 </div>
 
-<!-- insert site tracking codes here, like Google Urchin -->
-
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+var pageTracker = _gat._getTracker("UA-6490422-1");
+pageTracker._trackPageview();
+</script>
 </body>
 </html>
